# constellation

./: README.md  gradle.properties  settings.gradle.kts
composeApp/: build.gradle.kts
composeApp/schemas/io.shubham0204.model2vec.data.AppDatabase/: 1.json
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/io/shubham0204/model2vec/: AndroidContextInitializer.kt  FileUtils.android.kt  MainActivity.kt  MainApplication.kt  Model2Vec.android.kt  Platform.android.kt
composeApp/src/androidMain/kotlin/io/shubham0204/model2vec/data/: DBProvider.android.kt  Database.android.kt
composeApp/src/androidMain/kotlin/io/shubham0204/model2vec/di/: AppModule.android.kt
composeApp/src/androidMain/kotlin/io/shubham0204/model2vec/ml/: Model2Vec.kt  (+1 more)
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/composeResources/files/: tokenizer.json
composeApp/src/commonMain/kotlin/io/shubham0204/model2vec/: App.kt  FileUtils.kt  Greeting.kt  Model2Vec.kt  Platform.kt
composeApp/src/commonTest/kotlin/io/shubham0204/model2vec/: ComposeAppCommonTest.kt
composeApp/src/iosMain/cinterop/ios-arm64/: model2vec.def
composeApp/src/iosMain/cinterop/ios-arm64-simulator/: model2vec.def
composeApp/src/iosMain/kotlin/io/shubham0204/model2vec/: FileUtils.ios.kt  MainViewController.kt  Model2Vec.ios.kt  Platform.ios.kt
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
model2vec-rs/: Cargo.toml  Makefile
model2vec-rs/.cargo/: config.toml
model2vec-rs/src/: lib.rs
(+18 files in other folders)
